# DDCC-regional-master

./: CMakeLists.txt  Dockerfile  docker-compose.yaml
app/: .env.dist
app/include/regional-balancer/: configuration.hpp  utils.hpp
app/include/regional-balancer/handlers/: mainHandler.hpp  matrixHandler.hpp  vectorHandler.hpp
app/include/regional-balancer/kernel/: Client.hpp  Server.hpp
app/include/regional-balancer/requesters/: resourceRequester.hpp
app/include/regional-master/: configuration.hpp
app/include/regional-master/handlers/: resourceHandler.hpp
app/include/regional-master/kernel/: Client.hpp  Server.hpp
app/include/regional-master/requesters/: resourceRequester.hpp
app/src/: app.cpp  utils.cpp
app/src/handlers/: mainHandler.cpp  matrixHandler.cpp  resourceHandler.cpp  vectorHandler.cpp
app/src/kernel/: Client.cpp  Server.cpp
app/src/requesters/: resourceRequester.cpp
